Fix a bug where images always display at full width, even when they're aligned or resized in the WordPress editor.

--- a/wp-content/themes/law-comm/assets/less/_global.less
+++ b/wp-content/themes/law-comm/assets/less/_global.less
@@ -10,12 +10,8 @@ a {
 }
 
 img {
-	width: 100%;
+	max-width: 100%;
 	height: auto;
-}
-
-figure {
-	width: 100%!important;
 }
 
 .page-header {
